[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node_Main.gd" type="Script" id=1]
[ext_resource path="res://Sprite_farmer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprite_land.tscn" type="PackedScene" id=3]

[node name="Node_Main" type="Node"]
script = ExtResource( 1 )
_sprite_farmer_ps = ExtResource( 2 )
_sprite_land_ps = ExtResource( 3 )
_sprite_land_2_ps = ExtResource( 3 )

[node name="Button_calculate" type="Button" parent="."]
margin_left = 88.0
margin_top = 10.0
margin_right = 174.0
margin_bottom = 30.0
text = "Calculate"

[node name="Button_reset" type="Button" parent="."]
margin_left = 218.0
margin_top = 9.0
margin_right = 291.0
margin_bottom = 31.0
text = "Reset"

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 347.0
margin_right = 706.0
margin_bottom = 416.0
text = "Falta debugear cosas raras que pasan cuando le doy al reset y repito la prueba"
[connection signal="pressed" from="Button_calculate" to="." method="_on_Button_calculate_pressed"]
[connection signal="pressed" from="Button_reset" to="." method="_on_Button_reset_pressed"]
